# ews_api

./: LICENSE  pyproject.toml
src/ews_api/: __init__.py  _api.py  _const.py  _logging.py  _utils.py  api.py  const.py  errors.py  utils.py
tests/: test_api.py  test_utils.py
tests/examples/: example.json
